pengecekan student dan instance method

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1><marquee behavior="" direction="diagonal">ARTS SCHOOL</marquee></h1>
-    <a href="/teacher"><label for="">TEACHER</label></a>
-    <a href="/subject"><label for="">SUBJECT</label></a>
-    <a href="/student"><label for="">STUDENT</label></a>
+    <a href="/teacher"><button>TEACHER</button></a>
+    <a href="/subject"><button>SUBJECT</button></a>
+    <a href="/student"><button>STUDENT</button></a>
 </body>
 </html>
