--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Subject Data</h1>
+    <h1 align="center">Subject Data</h1>
     Back To<a href="/"><button>HOME</button></a>
     <table border="1">
         <thead>
