--- a/views/teacher/teacher.ejs
+++ b/views/teacher/teacher.ejs
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Teacher</title>
+<%- include ../partial/head%>
 </head>
 <body>
     <h1 align="center">Teachers Data</h1>
-    <h5 style="color: blue" align="center"><a href="/teacher/add">Add A Teacher</a></h5>
-    Back To<a href="/"><button>HOME</button></a>
-    <table border="1">
+<%- include ../partial/nav-bar%>
+    <table border="1" align="center">
         <thead>
             <th>ID</th>
             <th>FULL NAME</th>
