--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+<%- include ./partial/head%>
+
 </head>
 <body>
-    <h1><marquee behavior="" direction="diagonal">ARTS SCHOOL</marquee></h1>
-    <a href="/teacher"><button>TEACHER</button></a>
-    <a href="/subject"><button>SUBJECT</button></a>
-    <a href="/student"><button>STUDENT</button></a>
+        <h1>
+            <marquee behavior="" direction="diagonal">ARTS SCHOOL</marquee>
+        </h1>
+        <%- include ./partial/nav-bar%>
 </body>
 </html>
