--- a/views/subject/subject.ejs
+++ b/views/subject/subject.ejs
@@ -2,16 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Subject</title>
+<%- include ../partial/head%>
 </head>
 
 <body>
     <h1 align="center">Subject Data</h1>
-    Back To<a href="/"><button>HOME</button></a>
-    <table border="1">
+<%- include ../partial/nav-bar%>
+    <table border="1" align="center">
         <thead>
             <th>ID</th>
             <th>SUBJECT NAME</th>
@@ -29,7 +26,7 @@
                 <td>
                     <%if (r.dataValues.fullname.length > 0) {%>
                         <%r.dataValues.fullname.forEach((z,i=1)=>{%>
-                    <%=i+1+'.'+z+'\n'%>
+                    <%=i+1+'.'+z%><br>
                             <%})%>
                             <%}%>
                 </td>
