--- a/views/teacher/edit.ejs
+++ b/views/teacher/edit.ejs
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Edit Teach</title>
+<%- include ../partial/head%>
 </head>
 <body>
     <h2>Edit Teacher's Data</h2>
