--- a/views/partial/head.ejs
+++ b/views/partial/head.ejs
@@ -3,4 +3,62 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<style>
+    body {
+        font: 20px Montserrat, sans-serif;
+        line-height: 1.8;
+        color: #1568b6;
+    }
+
+    p {
+        font-size: 16px;
+    }
+
+    .margin {
+        margin-bottom: 45px;
+    }
+
+    .bg-1 {
+        background-color: #834a0a;
+        /* Green */
+        color: #291616;
+    }
+
+    .bg-2 {
+        background-color: #474e5d;
+        /* Dark Blue */
+        color: #c91111;
+    }
+
+    .bg-3 {
+        background-color: #ffffff;
+        /* White */
+        color: #555555;
+    }
+
+    .bg-4 {
+        background-color: #2f2f2f;
+        /* Black Gray */
+        color: #fff;
+    }
+
+    .container-fluid {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+
+    .navbar {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        border: 0;
+        border-radius: 0;
+        margin-bottom: 0;
+        font-size: 12px;
+        letter-spacing: 5px;
+    }
+
+    .navbar-nav li a:hover {
+        color: #1abc9c !important;
+    }
+</style>
 <title><%- pageTitle%></title>
